syntax = "proto3";

package chat;
option go_package = ".;chat";

message Message {
  string body = 1;
}

message GetMessagesRequest {
  bool empty = 1;
}

service ChatService {
  rpc SayHello(Message) returns (Message) {}
  rpc GetMessages(GetMessagesRequest) returns (stream Message) {}
}